--- a/src/components/Task/Task.module.css
+++ b/src/components/Task/Task.module.css
@@ -17,27 +17,37 @@
 }
 
 .task input[type="checkbox"] {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    -o-appearance: none;
-    border-radius: 12px;
-    padding: 10px;
-    border: 2px solid var(--blue);
-    margin-right: 1rem;
     cursor: pointer;
+    opacity: 0;
+    position: absolute;
+    width: 24px;
+    height: 24px;
+
 }
 
-.task input[type="checkbox"]:checked {
+.task p {
+    display: flex;
+}
+
+.task p::before {
+    content: '';
+    width: 20px;
+    height: 20px;
+    border: 2px solid var(--blue);
+    border-radius: 12px;
+    margin-right: 1rem;
+}
+
+.task input[type="checkbox"]:checked+p::before {
     background: var(--purple-dark);
     border: 2px solid var(--purple-dark);
 }
 
-.task input[type="checkbox"]:checked+span::before {
+.task input[type="checkbox"]:checked+p::before {
     content: '\2713';
     display: block;
     text-align: center;
-    color: #41B883;
-    position: absolute;
+    color: var(--gray-100);
     left: 0.7rem;
     top: 0.2rem;
 }
